--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           bundler-cache: true # Installs gems from your Gemfile.lock
       - name: Build with Jekyll
-        run: bundle exec jekyll build
+        run: JEKYLL_ENV=production bundle exec jekyll build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
