Update _config.yml Horror on the Orient Express

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,11 @@ collections:
     permalink: /:collection/:name/
     icon: "/assets/images/shadowrun_zero/campaign_icon.png"
 
+  horror_on_the_orient_express:
+    output: true 
+    title: "Horror on the Orient Express"
+    icon: "/assets/images/shadowrun_zero/campaign_icon.png"
+
 # Defaults for all pages and collections
 defaults:
   - scope:
